--- a/src/App.css
+++ b/src/App.css
@@ -152,19 +152,65 @@ header .header_text {
   margin-left: 20px;
   flex-grow: 1;
   cursor: pointer;
-
 }
 
-.diarydate{
+.diarydate {
   font-weight: bold;
   font-size: 20px;
   margin-bottom: 5px;
 }
 
-.diarycontent{
- font-size: 18px;
+.diarycontent {
+  font-size: 18px;
 }
 
-.editbtn{
+.editbtn {
   min-width: 70px;
+}
+
+/* newpage*/
+
+.diaryEditor section {
+  margin-bottom: 40px;
+}
+
+.diaryEditor h4 {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.inputbox input {
+  padding: 10px 20px;
+  background-color: #ececec;
+  border: none;
+  border-radius: 5px;
+  font-family: "Nanum Pen Script";
+  min-width: 100px;
+  font-size: 20px;
+}
+
+.emotionItem {
+  cursor: pointer;
+  border-radius: 5px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.emotionListWrapper {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  gap: 2%;
+}
+
+.emotionItem img {
+  width: 50%;
+  margin-bottom: 10px;
+}
+
+.emotionItem span {
+  font-size: 18px;
 }
